[package]
name = "awer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Alexandre Courbot <gnurou@gmail.com>"]

[features]
default = ["sdl2-sys"]
sdl2-sys = ["sdl2", "gl"]

[dependencies]
byteorder = "1"
clap = "3"
anyhow = "1.0"
enumn = "0.1"
# Used with gl
memoffset = "0.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "env-filter",
  "tracing-log",
] }
tracing-chrome = "0.7.0"

# SDL2 dependencies
sdl2 = { version = "0.36", optional = true, features = [
  "unsafe_textures",
  "raw-window-handle",
] }
gl = { version = "0.14", optional = true }

[dev-dependencies]
# Used with tests
memoffset = "0.9"
